--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,18 @@
-
-GROQ_API_KEY=gsk_.....
+GROQ_API_KEY=gsk_ab
 SQL_AGENT_MODEL=mistralai/mistral-7b-instruct-v0.3
 VALIDATOR_AGENT_MODEL=llama-3.3-70b-versatile
-GOOGLE_API_URL=https://generativelanguage.googleapis.com/v1beta
-APP_DB_URL=postgresql://app_user:secure_app_pass_123!@localhost:5432/text_to_sql_db
+APP_DB_URL=postgresql://app_user:secure_app_pass_123!@ip_address:port/database
 GROQ_API_URL=https://api.groq.com/openai/v1
 
-DATA_DB_URL=postgresql://app_user:secure_app_pass_123!@localhost:5432/text_to_sql_db
+DATA_DB_URL=postgresql://app_user:secure_app_pass_123!@ip_address:port/chat-data
 DEBUG=True
 MAX_SCHEMA_TABLES=50
-SUPERUSER_PASSWORD=***********
-
 
 API_TIMEOUT=60
-
-
 
 # OpenRouter configuration
 OPENROUTER_API_URL=https://openrouter.ai/api/v1
 OPENROUTER_REFERER=https://github.com/yourusername/text-to-sql
 OPENROUTER_TITLE=Text-to-SQL Agent
+
 OPENROUTER_API_KEY=sk-or-v1-------------------
